feat: rcon 연결 및 명령어 기능

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 BASE_URL=http://rcon.tareun.kr
-VUE_APP_BASE_WS_URL=http://rcon.tareun.kr
-VUE_APP_RCON_API_URL=%{BASE_URL}/api
-VUE_APP_RCON_API_WS_ENDPOINT_URL=${BASE_WS_URL}/rconWebSocket
-VUE_APP_RCON_API_WS_USER_SUB_RESPONSE_URL=/user/queue/response
+VITE_BASE_WS_URL=http://rcon.tareun.kr
+VITE_RCON_API_URL=%{BASE_URL}/api
+VITE_RCON_API_WS_ENDPOINT_URL=${BASE_WS_URL}/rconWebSocket
+VITE_RCON_API_WS_USER_SUB_RESPONSE_URI=/user/queue/response
 
-VUE_APP_RCON_API_WS_PALWORLD=/app/palworld
-VUE_APP_RCON_API_WS_MINECRAFT=/app/minecraft
+VITE_RCON_API_WS_PALWORLD_URI=/app/palworld
+VITE_RCON_API_WS_MINECRAFT_URI=/app/minecraft
