--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 BASE_URL=http://rcon.tareun.kr
 VITE_BASE_WS_URL=http://rcon.tareun.kr
 VITE_RCON_API_URL=%{BASE_URL}/api
-VITE_RCON_API_WS_ENDPOINT_URL=${BASE_WS_URL}/rconWebSocket
+VITE_RCON_API_WS_ENDPOINT_URL=ws://rcon.tareun.kr/api/rconWebSocket
 VITE_RCON_API_WS_USER_SUB_RESPONSE_URI=/user/queue/response
 
 VITE_RCON_API_WS_PALWORLD_URI=/app/palworld
